--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <link rel="shortcut icon" href="/images/reallyheadup.jpg" type="images/x-icon">
+    <link rel="icon" href="/images/reallyheadup.jpg" type="images/x-icon">
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/sass-bootstrap/dist/css/bootstrap.css" />
