--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
     <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
 
-    <script src='maps.googleapis.com/maps/api/js?sensor=false'></script>
+    <script src="maps.googleapis.com/maps/api/js?sensor=false"></script>
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
