SERIOUSLY I HAVE A FREAKIN MAP....NOT YET MAPPING BARRIER ISLANDS BUT IT IS WORKING THANK YOU LORD

--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,9 @@
     <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
 
-    <script src="maps.googleapis.com/maps/api/js?sensor=false"></script>
+    <script src="//maps.googleapis.com/maps/api/js?sensor=false"></script>
+    <script src="/path/to/lodash.underscore[.min].js"></script>
+    <script src="/path/to/angular-google-maps[.min].js"></script>
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
