--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <link rel="shortcut icon" href="/images/reallyheadup.jpg" type="images/x-icon">
     <link rel="icon" href="/images/reallyheadup.jpg" type="images/x-icon">
     <!-- build:css styles/vendor.css -->
+    <link href='http://fonts.googleapis.com/css?family=Raleway:600' rel='stylesheet' type='text/css'>
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/sass-bootstrap/dist/css/bootstrap.css" />
     <!-- endbower -->
@@ -46,8 +47,7 @@
     <![endif]-->
 
     <script src="//maps.googleapis.com/maps/api/js?sensor=false"></script>
-    <script src="/path/to/lodash.underscore[.min].js"></script>
-    <script src="/path/to/angular-google-maps[.min].js"></script>
+    
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
