--- a/app/index.html
+++ b/app/index.html
@@ -51,8 +51,8 @@
     <script src="bower_components/es5-shim/es5-shim.js"></script>
     <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
-
-    <script src="//maps.googleapis.com/maps/api/js?sensor=false"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+    // <!-- <script src="//maps.googleapis.com/maps/api/js?sensor=false"></script> -->
     
 
     <!-- build:js scripts/vendor.js -->
@@ -72,6 +72,8 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/map.js"></script>
+
         <!-- endbuild -->
 </body>
 </html>
